# StockAgent

./: .gitignore  README.md  main.py  pyproject.toml
doc/: react_trace.md  构建计划.md
seek_agent/agents/: react_agent.py
seek_agent/core/: exceptions.py  llm.py
seek_agent/tools/: tools.py  weather_tool.py
stock_agent/agents/: react_agent.py
stock_agent/llm/: openai_model_client.py
