[project]
name = "seek-agent"
version = "0.1.0"
description = "HelloAgents LLM Agent 框架"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]

[tool.hatch.build.targets.wheel]
packages = ["seek_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
